<resources>
    <string name="swiftp_name">rsftp</string>
    <string name="swiftp_name_free">FTP Server (Free)</string>
    <string name="swiftp_name_demo">FTP Server (Demo)</string>
    <string name="running_label">Server started</string>
    <string name="running_summary_stopped">Toggle the state of the ftp server</string>
    <string name="running_summary_started">running at %s</string>
    <string name="running_summary_failed">
        Failed to start the FTP server, not connected to the local network (wifi or ethernet)?
    </string>
    <string name="running_summary_failed_to_get_ip_address">
        Failed to start the FTP server, unable to get IP address
    </string>
    <string name="donation_label">Donation</string>
    <string name="donation_summary">Let me makes the software more better</string>
    <string name="settings_label">Settings</string>
    <string name="user_label">User</string>
    <string name="login_settings_label">Login settings</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="show_password_label">Display password</string>
    <string name="username_validation_error">
        The password must consist of 1 or more alphanumeric characters.
        No other characters are allowed.
    </string>
    <string name="password_validation_error">
        The password must consist of 1 or more alphanumeric characters.
        No other characters are allowed.
    </string>
    <string name="anonymous_label">Anonymous</string>
    <string name="allow_anonymous_label">Allow anonymous login</string>
    <string name="anonymous_summary">Anonymous logins are only allowed read access</string>
    <string name="advanced_settings_label">Advanced settings</string>
    <string name="port_number_label">Port Number</string>
    <string name="port_validation_error">The port number must be in the range 1 to 65535.</string>
    <string name="disconnect_wifi_wait_time_label">Wifi disconnect wait time(seconds)</string>
    <string name="disconnect_wifi_input_error">The number must be in the range 0 to 60.</string>
    <string name="chroot_label">Stay in folder</string>
    <string name="accept_wifi_label">Accept connection from wifi</string>
    <string name="wakelock_label">Keep device awake (full CPU speed)</string>
    <string name="no_display_label">No Interface Start</string>
    <string name="extra_label">Extra</string>
    <string name="experiment_label">Experiment</string>
    <string name="permission_label">Permission Explain</string>
    <string name="evaluate_label">Evaluate App</string>
    <string name="help_label">Help</string>
    <string name="about_label">About</string>
    <string name="help_dlg_title">FTP Server Help</string>
    <string name="help_dlg_message">\
Thanks for using FTP Server (RsFTP)! Here are some brief usage instructions. \n\n\
\
This program allows you to run an ftp server on your android device. This means that any
program can access the files on your device while the ftp server is running. For example,
entering \'ftp://...\' in the firefox url bar will allow you to browse the files on your
device from a desktop pc or a laptop.\n\n
\
By default, the user name and password are both \'ftp\', you should change them. You use
this username and password when accessing the server.\n\n
\
There is a configuration option (\"keep phone awake\") that fixes a problem where
file transfers go slow or stop completely when the phone sleeps. If you have this
problem, check this box and restart the program. Your phone will stay awake as long as
the server is running.\n\n
\
For power and security reasons, it is recommended that the server be stopped after use.\n\n\
\
If something is not working the way you expect it to, please report it to tuzhao
(tuzhaocn@gmail.com).\n\n\
\
If you have any ideas or suggestions that you can send email to me.\n\n
    </string>
    <string name="notification_server_starting">Starting at %s</string>
    <string name="notification_title">FTP Server is running</string>
    <string name="notification_text">at %s</string>
    <string name="notification_stop_text">Stop server</string>
    <string name="nsd_servername_postfix">FTP Server</string>
    <string name="select">Select</string>
    <string name="cancel">Cancel</string>
    <string name="feedback">Send feedback</string>
    <string name="about">About</string>
    <string name="autoconnect_label">AutoConnect settings</string>
    <string name="autoconnect_summary">Select the wifi networks on which to autoconnect</string>
    <string name="autoconnect_error_enable_wifi_for_access_points">
        Enable wifi to get list of access points
    </string>
    <string name="demo_while_paid_dialog_title">
        Demo started while paid version is installed
    </string>
    <string name="demo_while_paid_dialog_message">
        Thank you for supporting the development!\n\n
        You are trying to start the demo version while the paid version
        is installed. To insure optimal operation we ask you to remove
        the demo version and only start the paid version.
    </string>
    <string name="storage_warning">
        Warning: storage is not available. You may want to unmount it.
    </string>
    <string name="widget_name">FTP Server Widget</string>
    <string name="notif_settings_text">Settings</string>
    <string name="app_copyright">Copyright 2017</string>
    <string name="app_url" translatable="false">
        git@github.com:tuzhao/rsftp.git\ngit@git.oschina.net:tuzhao/rsftp.git
    </string>
    <string name="about_license_title">License</string>
    <string name="about_license_name">GNU GPL3</string>
    <string name="about_license_url" translatable="false">
        <a href="https://www.gnu.org/licenses/gpl-3.0.en.html">https://www.gnu.org/licenses/gpl-3.0.en.html</a>
    </string>
    <string name="about_description_title">Description</string>
    <string name="about_description_text">
        RsFTP (实简FTP) allows you to run an ftp server on your android device.\nThis project id developed and maintained by myself,so we are limited test models in hand.Please understand that maybe there are some problems in operation.\n\nProblem Feedback QQ Group:1362290
    </string>
    <string name="about_libraries_title">Libraries</string>
    <string name="about_contributor_title">Contributors</string>
    <string name="about_contributor_list">
        tuzhao\nQQ:406943270\nhttp://weibo.com/406943270\n\nAnn.(logo design)\nQQ:260512173
    </string>
    <string name="app_theme">Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="light_theme">Light Theme</string>
    <string name="mixed_theme">Mixed Theme</string>
    <string name="app_logo">app logo</string>
    <string name="welcome_note">do the Real Simple best FTP Server</string>
    <string name="welcome_bottom">tuzhao.org</string>
    <string name="exit_title">FTP Server Note</string>
    <string name="exit_msg">Are you sure want to exit this app?\nIt will be kill FTP Server if you click submit button.</string>
    <string name="submit">Submit</string>
    <string name="save">Save</string>
    <string name="permission_note">Permission Note</string>
    <string name="permission_msg">This app need all permissions granted,%s. If you don\'t give all permissions that will cause this app can not run normally.</string>
    <string name="permission_bt_exit">Exit App</string>
    <string name="permission_bt_set">Setting</string>
    <string name="permission_bt_detail">Explain</string>
    <string name="open_error_mail">can not open Mail app!</string>
    <string name="open_error_setting">can not open Setting  interface!</string>
    <string name="permission_explain">
        1.READ_EXTERNAL_STORAGE\n
        read file for FTP Service.\n\n
        2.WRITE_EXTERNAL_STORAGE\n
        write file from other devices for FTP Service.\n\n
        3.INTERNET\n
        umeng service of application statistical.\n
        FTP Service need internet to communicate with other devices.\n\n
        4.ACCESS_NETWORK_STATE\n
        umeng service of application statistical.\n
        if do not have network we should not  start service.\n\n
        5.ACCESS_WIFI_STATE\n
        umeng service of application statistical.\n\n
        6.WAKE_LOCK\n
        keep the screen bright .\n\n
        7.CHANGE_WIFI_MULTICAST_STATE\n
        receive wifi broadcast.\n\n
        8.READ_PHONE_STATE \n
        umeng service of application statistical.\n
    </string>
    <string name="dialog_fail_start_msg">Start FTP Service failure,do you have connected Wifi or Wired network?We do not support use of mobile data traffic,
    because computers and mobile phones access each other only in the same LAN.\n\n
    If you make sure that you have connected Wifi or Wired network,you can contact with me and tell me the details.You can find my contact information in the About interface.
    </string>
    <string name="wifi_setting">Wifi Setting</string>
    <string name="wifi_open_error">open wifi setting failure</string>
    <string name="server_add">Add FTP Server</string>
    <string name="server_add_address">Address:</string>
    <string name="server_add_port">Port:</string>
    <string name="server_add_address_hint">eg:192.168.1.xxx/test.com</string>
    <string name="server_add_port_hint">default:2121</string>
    <string name="server_add_account">Account:</string>
    <string name="server_add_account_hint">default empty</string>
    <string name="server_add_password">Password:</string>
    <string name="server_add_note">You don\'t have any FTP server.\nPlease add one.</string>
    <string name="ftp">FTP</string>
    <string name="running">Running</string>
    <string name="address_filter">0123456789abcdefghijklmnopqrstuvwxyz.-</string>
    <string name="refresh">refresh</string>
    <string name="local_folder">Local Folder:</string>
    <string name="storage_out">Out Storage</string>
    <string name="storage_in">In Storage</string>
    <string name="server_encoding">encoding:</string>
    <string name="hidden_files">Hidden Files:</string>
    <string name="download">download</string>
    <string name="download_total">Total download file count: %s</string>
    <string name="download_successful">Download complete file count: %s</string>
    <string name="download_failure">Download failure file count: %s</string>
    <string name="download_in">File in downloading: %s</string>
    <string name="download_title">Download</string>
    <string name="mobile">mobile</string>
    <string name="upload">upload</string>
    <string name="upload_title">Upload</string>
    <string name="upload_total">Total upload file count: %s</string>
    <string name="upload_successful">Upload complete file count: %s</string>
    <string name="upload_failure">Upload failure file count: %s</string>
    <string name="zero_percent">0%</string>
    <string name="server">server</string>
    <string name="select_all">select all</string>
    <string name="select_invert">select invert</string>
    <string name="select_clear">clear select</string>
    <string name="delete_title">Delete</string>
    <string name="delete_total">Total delete file count: %s</string>
    <string name="delete_successful">Delete complete file count: %s</string>
    <string name="delete_failure">Delete failure file count: %s</string>
    <string name="delete">delete</string>
    <string name="file_name">File Name:</string>
    <string name="path">Path:</string>
    <string name="size">Size:</string>
    <string name="last_modified">Last Modified:</string>
    <string name="permission">Permission:</string>
    <string name="owner">Owner:</string>
    <string name="group">Group:</string>
    <string name="mime_type">Mime Type:</string>
    <string name="file_detail">File Detail</string>
    <string name="file_type_img">file type img</string>
</resources>