<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_mobile"
        android:icon="@drawable/mobile"
        android:title="@string/mobile"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_download"
        android:icon="@drawable/download"
        android:title="@string/download"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/refresh"
        android:orderInCategory="100"
        android:title="@string/refresh"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_select_all"
        android:orderInCategory="101"
        android:title="@string/select_all"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_select_invert"
        android:orderInCategory="102"
        android:title="@string/select_invert"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_clear_select"
        android:orderInCategory="103"
        android:title="@string/select_clear"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_delete"
        android:orderInCategory="104"
        android:title="@string/delete"
        app:showAsAction="never"/>

</menu>
