<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_cloud"
        android:icon="@drawable/cloud"
        android:title="@string/server"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_upload"
        android:icon="@drawable/upload"
        android:title="@string/upload"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/refresh"
        android:orderInCategory="100"
        android:title="@string/refresh"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_select_all"
        android:orderInCategory="101"
        android:title="@string/select_all"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_select_invert"
        android:orderInCategory="102"
        android:title="@string/select_invert"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_clear_select"
        android:orderInCategory="103"
        android:title="@string/select_clear"
        app:showAsAction="never"/>

</menu>
