<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="30dp"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:paddingTop="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_title"
        android:textColor="@android:color/white"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/delete_total_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/delete_total"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/delete_successful_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/delete_successful"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/delete_failure_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/delete_failure"
        android:textSize="14sp"/>

    <ProgressBar
        android:id="@+id/delete_pb"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:max="100"/>

    <TextView
        android:id="@+id/delete_num_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:gravity="right"
        android:paddingLeft="0dp"
        android:paddingRight="6dp"
        android:text="@string/zero_percent"
        android:textColor="@android:color/white"
        android:textSize="14sp"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/delete_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"/>

</LinearLayout>
