<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="30dp"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:paddingTop="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/download_title"
        android:textColor="@android:color/white"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/download_total_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/download_total"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/download_successful_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/download_successful"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/download_failure_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/download_failure"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/download_process_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/download_in"
        android:textSize="14sp"
        android:visibility="gone"/>

    <ProgressBar
        android:id="@+id/download_pb"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:max="100"/>

    <TextView
        android:id="@+id/download_num_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:paddingLeft="0dp"
        android:paddingRight="6dp"
        android:text="0%"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/download_rv"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:scrollbars="vertical"/>

</LinearLayout>
